dnl Process this file with autoconf to produce a configure script.
AC_INIT(FGLDOC-2.00)
AC_CONFIG_HEADER(config.h)

dnl Check for standard programs.
AC_PROG_CC
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_INSTALL

dnl Check for working const.
AC_C_CONST

dnl Check whether to use ESQL/C.
AC_ARG_WITH(esqlc,
  [  --without-esqlc         do not use ESQL/C],
  [ if test "$withval" = no; then
	use_esqlc=no
    else
	use_esqlc="$withval"
    fi ])

dnl Check the Informix environment and ESQL/C setup.
if test "$use_esqlc" != no; then
    AC_INFORMIX_ENV
    AC_PROG_ESQL
    AC_FUNC_RGETLMSG
    AC_DEFINE(HAVE_ESQLC)
    ecobjs=read_pdbs.o
    target=fgldoc-ec
else
    ecobjs=""
    target=fgldoc
fi
AC_SUBST(ecobjs)
AC_SUBST(target)

dnl Default values for YFLAGS and LFLAGS, if not set.
if test "x$YFLAGS" = x; then
    YFLAGS=-d
fi
if test "x$LFLAGS" = x; then
    LFLAGS=""
fi
AC_SUBST(YFLAGS)
AC_SUBST(LFLAGS)

dnl Add LEXLIB to LIBS.
LIBS="$LIBS $LEXLIB"

dnl Do other substitutions.
AC_SUBST(ESQLFLAGS)

AC_OUTPUT(Makefile)
